Add request examples
